src/app/header/header.component.scss
@import '../../styles.scss';

.header {
    background-image: linear-gradient(rgba(38, 38, 38, 0.4), rgba(38, 38, 38, 0.4)), url("/assets/backgrounds/header_background.webp"); // #262626 I forget way too often that you can do this
    background-size: cover;
    background-position: center;
    display: flex;
    align-items: center;
    padding: 32px 64px;
    width: 100%; 


    .main-menu {
        display: flex;
        gap: 32px;
        list-style: none;
        margin:0;
        padding:0;

        .menu-item {
            font-size: 24px;
            font-weight: 600; // bold
            position: relative;
            cursor: pointer;
            text-decoration: none;
            color: $white;
            display: flex;
            flex-direction: column;
            align-items: center;

            a {
                text-decoration: none;
                color:#f1f1f1;
                transition: 0.2s ease-out;
                height: 100%;
                display: flex;
                align-items: center;
                gap: 4px;

                .title-tags {
                    display: flex;
                    align-items: center;
                    gap: 4px;
                }

                &:hover {
                    color: $link;

                    .title-tags {
                        color: inherit;

                        .beta-tag-dd, .wip-tag-dd {
                            color: #FFFFFF;
                        }
                    }
                }

                &:hover + .header-dropdown-menu {
                    display: flex;
                }
            }

            .header-dropdown-menu {
                position: absolute;
                display: none;
                flex-direction: column;
                padding: 16px;
                gap: 8px;
                background-color: $content;
                z-index: 1;
                top: 36px;
                border-radius: 5px;

                a {
                    font-size: 16px;
                    font-weight: 400;
                    display: flex;
                    flex-direction: column;
                    align-items: flex-start;
                    width: 100%;
                    padding: 0 0 8px 0;
                    border-bottom: 1px solid $border;

                    &:last-child {
                        padding: unset;
                        border-bottom: unset;
                    }

                    p {
                        font-size: 14px;
                        font-weight: 300;
                        width: 275px; // yes this is crap but thankfully the mobile version won't have this problem
                        margin: unset;
                    }
                }

                &:hover {
                    display: flex;
                }
            }
        }

        &_mobile {
            display: none;
        }
    }
}

@media only screen and (max-width: $tablet) {
    .header {
        height: 80px;
        padding: 0px 24px;

        .main-menu {
            display: none;

            &_mobile {
                position: relative;
                display: flex;
                height: 100%;
                width: 100%;
                align-items: center;
                justify-content: space-between;

                .home {
                    margin: unset;
                    font-size: 24px;
                }

                .menu-icon {
                    padding: 8px 6px;
                    background: white;
                    border: 2px solid black;
                    border-radius: 10px;
                    transition: 0.2s ease-in-out;

                    // &.active { this is missing like an inverse color SVG and im too lazy to do that right now
                    //     background: black;
                    //     border: 2px solid white;
                    // }
                }

                .burger-menu {
                    display: none;
                    position: absolute;
                    top: 80px;
                    left: -24px;
                    width: calc(100% + 48px);
                    padding: 20px;
                    z-index: 10;
                    background: $content;

                    // display: flex;
                    flex-direction: column;
                    gap: 20px;

                    .menu-item {
                        padding: 0 0 16px 0;
                        border-bottom: 2px solid $border;

                        &:last-child {
                            padding: unset;
                            border-bottom: unset;
                        }
                        
                        .hyperlink {
                            display: flex;
                            justify-content: space-between;
                            text-decoration: none;

                            .item-wrapper {
                                display: flex;
                                align-items: center;
                                gap: 10px;

                                .item-icon {
                                    width: 36px;
                                    height: 36px;
                                }

                                .item-text {
                                    font-size: 24px;
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}

@media only screen and (max-width: $mobile) {
    .header {
        .main-menu {
            &_mobile {
                .burger-menu {
                    .menu-item {
                        padding: 0 0 12px 0;

                        .hyperlink {
                            .item-wrapper {
                                gap: 8px;

                                .item-icon {
                                    width: 32px;
                                    height: 32px;
                                }

                                .item-text {
                                    font-size: 18px;
                                }
                            }

                            .arrow {
                                width: 24px;
                                height: 24px;
                            }
                        }
                    }
                }
            }
        }
    }
}

